k8s/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-tp-api
  labels:
    app: k8s-tp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-tp-api
  template:
    metadata:
      labels:
        app: k8s-tp-api
    spec:
      containers:
        - name: k8s-tp-api
          image: k8s-tp-app:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: app-config-api
