k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-tp-app
  labels:
    app: k8s-tp-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-tp-app
  template:
    metadata:
      labels:
        app: k8s-tp-app
    spec:
      containers:
        - name: k8s-tp-app
          image: k8s-tp-app:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          command:
            - sh
            - -c
            - |
              export $(cat /secrets/secrets.env | xargs)
              node index.js
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
            - name: secrets-volume
              mountPath: /secrets
      volumes:
        - name: config-volume
          configMap:
            name: app-config
        - name: secrets-volume
          emptyDir: {}
