k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-tp-api-service
spec:
  selector:
    app: k8s-tp-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
